# adh-cli

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Makefile  README.md  profile_startup.py  pyproject.toml  requirements-dev.txt  requirements.txt  test_api_key.py
.claude/: settings.json
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
adh_cli/: __init__.py  __main__.py  __main___policy.py  app.py  app_policy.py  commands.py
adh_cli/agents/: README.md  __init__.py  agent_loader.py
adh_cli/agents/code_reviewer/: __init__.py  agent.md
adh_cli/agents/orchestrator/: __init__.py  agent.md
adh_cli/agents/planner/: __init__.py  agent.md
adh_cli/agents/researcher/: __init__.py  agent.md
adh_cli/agents/search/: agent.md
adh_cli/agents/tester/: agent.md
adh_cli/config/: __init__.py  models.py  settings_manager.py
adh_cli/config/defaults/: model_aliases.json
adh_cli/core/: agent_delegator.py  config_paths.py  policy_aware_agent.py  policy_aware_function_tool.py  policy_aware_llm_agent.py  tool_executor.py
adh_cli/policies/: __init__.py  policy_engine.py  policy_types.py
adh_cli/policies/defaults/: command_policies.yaml  filesystem_policies.yaml  network_policies.yaml
adh_cli/policies/definitions/: commands.yaml  filesystem.yaml  network.yaml
adh_cli/safety/: __init__.py  base_checker.py  pipeline.py
adh_cli/safety/checkers/: __init__.py  command_checkers.py  data_checkers.py  filesystem_checkers.py
adh_cli/screens/: __init__.py  chat_screen.py  main_screen.py  policy_chat_screen.py  settings_modal.py  settings_screen.py
adh_cli/services/: __init__.py  adk_agent_service.py  adk_service.py  clipboard_service.py  prompt_service.py
adh_cli/session/: __init__.py  models.py  recorder.py
adh_cli/tools/: __init__.py  agent_tools.py  base.py  google_tools.py  shell_tools.py  specs.py  tool_registry.py  web_tools.py
adh_cli/tools/shell/: __init__.py  prompt.md  tool.py
adh_cli/ui/: chat_widgets.py  confirmation_dialog.py  status_footer.py  styles.tcss  theme.py  tool_execution.py  tool_execution_manager.py  tool_execution_widget.py
adh_cli/widgets/: __init__.py  model_list.py
docs/: MODEL_ALIASES.md  TOOLS.md  TOOL_UI_DESIGN.md  model_aliases.example.json
docs/adr/: 000-template.md  001-policy-aware-architecture.md  002-tool-execution-ui-tracking.md  003-google-adk-integration.md  004-secure-api-key-storage.md  005-unified-error-handling.md  006-policy-configuration-ui.md  007-comprehensive-integration-tests.md  008-centralized-model-configuration.md  009-xdg-compliant-configuration.md  010-markdown-driven-agent-definition.md  011-command-palette-integration.md  012-ui-based-tool-confirmation.md  013-ui-design-system.md  014-tool-spec-registry.md  015-chat-integrated-tool-execution.md  016-multi-agent-orchestration.md  017-tool-display-hooks.md  018-initialization-agent-and-environment-probing.md  019-adopt-textuals-built-in-footer.md  020-session-transcript-capture.md  021-agent-tool-configuration-strategy.md  022-deep-adk-integration-via-plugins.md  023-streaming-tool-output.md  024-headless-cli-mode.md  README.md
scripts/: generate_tools_docs.py  sync_requirements.py
tests/: __init__.py  test_app.py  test_app_policy.py
tests/agents/: __init__.py  test_agent_loader.py
tests/config/: test_models.py  test_settings_manager.py
tests/core/: test_agent_delegator.py  test_policy_aware_agent.py  test_policy_aware_function_tool.py  test_policy_aware_llm_agent.py  test_tool_executor.py
tests/integration/: test_adk_integration.py  test_tool_execution_ui.py
tests/policies/: __init__.py  test_policy_engine.py  test_policy_types.py
tests/safety/: __init__.py  test_pipeline.py  test_safety_checkers.py
tests/screens/: __init__.py  test_chat_screen.py  test_policy_chat_screen.py  test_settings_modal.py
tests/services/: __init__.py  test_clipboard_service.py  test_prompt_service.py
tests/session/: test_session_recorder.py
tests/tools/: __init__.py  test_google_tools_runtime.py  test_shell_tools.py  test_specs.py  test_streaming.py  test_tool_registry.py  test_web_tools.py
tests/ui/: test_chat_widgets.py  test_confirmation_dialog.py  test_status_footer.py  test_tool_execution.py  test_tool_execution_manager.py  test_tool_execution_widget.py
